# wollsey-public

./: .gitignore  CMakeLists.txt  LICENSE  README.md  branching_process.cpp  branching_process.h  constant_branching_process.cpp  constant_branching_process.h  drug.cpp  drug.h  expo.py  extrah5.h  forge.py  gene.cpp  gene.h  limited_branching_process.cpp  limited_branching_process.h  main.cpp  medic.cpp  medic.h  nurse.py  phenotypist.cpp  phenotypist.h  plan.py  protocol.cpp  protocol.h  record.cpp  record.h  simulator.h
examples/: make-example.sh
test/: branching.cpp  protocol.cpp  record.cpp  translation.cpp
